added files for unit tests and third party lib catch2 for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,15 @@ project(SplineNetLib VERSION 1.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# enable warnings for all compilers
+# Optionally enable warnings for all compilers
 if(MSVC)
-    add_compile_options(/W4)  # For Visual Studio
+    add_compile_options(/W4)
 else()
-    add_compile_options(-Wall -Wextra -Wpedantic)  # For other compilers
-    add_compile_options(-Werror)  # Treat warnings as errors
+    add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
+
+# Add the include directory so other projects can use headers
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # Add the library from the source files
 add_library(SplineNetLib
@@ -25,35 +27,25 @@ add_library(SplineNetLib
 # Specify the include directories for the library target
 target_include_directories(SplineNetLib PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-# Add an example executable (optional)
+# Add an example or test executable (optional)
 add_executable(SplineNetExample examples/example_network.cpp)
 
 # Link the example with the library
 target_link_libraries(SplineNetExample PRIVATE SplineNetLib)
 
 # Optional: Install the library and headers
-install(TARGETS SplineNetLib
-    EXPORT SplineNetLibTargets
-    DESTINATION lib
-)
-
+install(TARGETS SplineNetLib DESTINATION lib)
 install(DIRECTORY include/SplineNetLib DESTINATION include)
 
-# Create the export file for the library targets
-install(EXPORT SplineNetLibTargets
-    FILE SplineNetLibTargets.cmake
-    NAMESPACE SplineNetLib::
-    DESTINATION lib/cmake/SplineNetLib
-)
+# Include CMakePackageConfigHelpers for package configuration
+include(CMakePackageConfigHelpers)
 
-# Write the version file for the package
+# Generate the version file
 write_basic_package_version_file(
     "${CMAKE_CURRENT_BINARY_DIR}/SplineNetLibConfigVersion.cmake"
     VERSION ${PROJECT_VERSION}
     COMPATIBILITY AnyNewerVersion
 )
 
-# Install the version file
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/SplineNetLibConfigVersion.cmake"
-    DESTINATION lib/cmake/SplineNetLib
-)
+# Install the package configuration file
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/SplineNetLibConfigVersion.cmake" DESTINATION lib/cmake/SplineNetLib)
