added new test scriptbto the tests CMake.

--- a/.github/workflows/CMakeLists.txt
+++ b/.github/workflows/CMakeLists.txt
@@ -9,6 +9,7 @@
 # Set the source files for the tests in a variable (you can easily add more test files here later)
 set(TEST_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/unit_tests/network_tests.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/unit_tests/spline_tests.cpp
 )
 
 # Add an executable for the tests (it will compile all the test sources)
